# percona-server

./: .gitignore  .gitmodules  CMakeLists.txt
.clangd/index/: _check.cc.47DD97CDFA1C0DEB.idx  _rectest.cc.DBFB798FA81D32ED.idx  abstract_chain_element.cc.1FDA122B0432046A.idx  abstract_chain_element.h.DA6F8BBF7CE0D31B.idx  abstract_connection_program.cc.A76489D310BFDBF1.idx  abstract_connection_program.h.60D26C56AAF97BFC.idx  abstract_connection_provider.cc.5E6C3AD56443082F.idx  abstract_connection_provider.h.9DADDC0DFCCCD436.idx  abstract_crawler.cc.8CA866CE28CF6196.idx  abstract_crawler.h.018B00C0ADA1F2C5.idx  abstract_data_formatter_wrapper.cc.11691CCFE1DB4B7F.idx  abstract_data_formatter_wrapper.h.6F15901DD20191DA.idx  abstract_data_object.cc.4FDE9E2927E5CFA9.idx  abstract_data_object.h.078D64C9F0C917F7.idx  abstract_database_dump_task.cc.F0AA0B55E4487029.idx  abstract_database_dump_task.h.FECE0409BE65A6C4.idx  abstract_dump_task.cc.712852F955C6DF06.idx  (+5947 more)
mysys/: my_default.cc  my_getopt.cc
plugin/multi_master/: CMakeLists.txt  update_mysql_file.sh
plugin/multi_master/mysql-include/: multi_master_handler.h
plugin/multi_master/mysql-sql/: multi_master_handler.cc  multi_master_handler.h
plugin/multi_master/src/: plugin.cc
plugin/multi_master_log_plugin/: CMakeLists.txt  mml_plugin_functions.cc  mml_plugin_functions.h
plugin/multi_master_log_plugin/benchmark/: benchlog.h  update_ycsb_workload.cc  update_ycsb_workload.h
plugin/multi_master_log_plugin/include/: conflict.h  conflict_handle.h  conflict_thread_pool.h  debug.h  id_allocate.h  locktable_client.h  mmlp_type.h  phxpaxos_api.h  plugin_interface.h  trx_info.h  trx_log.h  trx_log_hole.h  xcom_gcs.h
plugin/multi_master_log_plugin/lib/brpc_api/: CMakeLists.txt  CMakeLists.txt.back  log_transfer.cc  log_transfer.h
plugin/multi_master_log_plugin/lib/brpc_api/id-increment/: CMakeLists.txt  test  test.cpp
plugin/multi_master_log_plugin/lib/brpc_api/include_dir/brpc_include/: idl_options.pb.h
plugin/multi_master_log_plugin/lib/brpc_api/include_dir/brpc_include/brpc/: builtin_service.pb.h  errno.pb.h  get_favicon.pb.h  get_js.pb.h  nshead_meta.pb.h  options.pb.h  proto_base.pb.h  rpc_dump.pb.h  rtmp.pb.h  span.pb.h  streaming_rpc_meta.pb.h  trackme.pb.h
plugin/multi_master_log_plugin/lib/brpc_api/include_dir/brpc_include/brpc/policy/: baidu_rpc_meta.pb.h  hulu_pbrpc_meta.pb.h  mongo.pb.h  public_pbrpc_meta.pb.h  sofa_pbrpc_meta.pb.h
plugin/multi_master_log_plugin/lib/brpc_api/lock_table/: CMakeLists.txt
plugin/multi_master_log_plugin/lib/brpc_api/proto/: id.pb.cc  id.pb.h  id.proto  lock_inform.pb.cc  lock_inform.pb.h  lock_inform.proto  lock_table.pb.cc  lock_table.pb.h  lock_table.proto  trx_log.pb.cc  trx_log.pb.h  trx_log.proto
plugin/multi_master_log_plugin/lib/easylogger/: easylogger.h
plugin/multi_master_log_plugin/lib/libmysqlgcs/: CMakeLists.txt  rpcgen.cmake
plugin/multi_master_log_plugin/lib/libmysqlgcs/include/mysql/gcs/: gcs_communication_event_listener.h  gcs_communication_interface.h  gcs_control_event_listener.h  gcs_control_interface.h  gcs_group_management_interface.h  gcs_interface.h  gcs_logging.h  gcs_logging_system.h  gcs_message.h  gcs_view.h
plugin/multi_master_log_plugin/lib/libmysqlgcs/include/mysql/gcs/xplatform/: byteorder.h  my_xp_cond.h  my_xp_thread.h  my_xp_util.h
plugin/multi_master_log_plugin/lib/libmysqlgcs/src/: gcs_interface_factory.cc
plugin/multi_master_log_plugin/lib/libmysqlgcs/src/bindings/xcom/: gcs_basic_logging.h  gcs_internal_message.cc  gcs_internal_message.h  gcs_internal_message_headers.cc  gcs_internal_message_headers.h  gcs_message_stage_lz4.cc  gcs_message_stage_lz4.h  gcs_message_stage_split.cc  gcs_message_stage_split.h  gcs_message_stages.cc  gcs_message_stages.h  gcs_xcom_communication_interface.cc  gcs_xcom_communication_interface.h  gcs_xcom_communication_protocol_changer.cc  gcs_xcom_communication_protocol_changer.h  gcs_xcom_control_interface.cc  gcs_xcom_control_interface.h  gcs_xcom_group_management.cc  gcs_xcom_group_management.h  gcs_xcom_group_member_information.cc  gcs_xcom_group_member_information.h  gcs_xcom_input_queue.h  gcs_xcom_interface.cc  gcs_xcom_interface.h  gcs_xcom_networking.cc  gcs_xcom_networking.h  gcs_xcom_notification.cc  gcs_xcom_notification.h  gcs_xcom_proxy.cc  gcs_xcom_proxy.h  gcs_xcom_state_exchange.cc  gcs_xcom_state_exchange.h  gcs_xcom_statistics_interface.cc  gcs_xcom_statistics_interface.h  gcs_xcom_synode.cc  gcs_xcom_synode.h  gcs_xcom_utils.cc  gcs_xcom_utils.h  gcs_xcom_view_identifier.cc  gcs_xcom_view_identifier.h
plugin/multi_master_log_plugin/lib/libmysqlgcs/src/bindings/xcom/xcom/: app_data.c  app_data.h  bitset.c  bitset.h  checked_data.c  checked_data.h  err_dump.h  gcs_debug.h  get_synode_app_data.c  get_synode_app_data.h  node_address.c  node_address.h  node_connection.h  node_list.c  node_list.h  node_set.c  pax_msg.c  pax_msg.h  result.h  retry.h  server_struct.h  simset.c  simset.h  site_def.c  site_def.h  site_struct.h  sock_probe.c  sock_probe.h  sock_probe_ix.c  sock_probe_win32.c  synode_no.c  synode_no.h  task.c  task.h  task_debug.c  task_debug.h  task_net.c  task_net.h  task_os.h  xcom_base.c  (+23 more)
plugin/multi_master_log_plugin/lib/libmysqlgcs/src/interface/: gcs_group_identifier.cc  gcs_logging.cc  gcs_logging_system.cc  gcs_member_identifier.cc  gcs_message.cc  gcs_psi.cc  gcs_tagged_lock.cc  gcs_types.cc  gcs_view.cc
plugin/multi_master_log_plugin/lib/libmysqlgcs/src/interface/xplatform/: my_xp_cond.cc  my_xp_mutex.cc  my_xp_thread.cc  my_xp_util.cc
plugin/multi_master_log_plugin/lib/phxpaxos_api/: CMakeLists.txt  phxpaxos_api.cc  phxpaxos_api.h
plugin/multi_master_log_plugin/src/: conflict_handle.cc  conflict_thread_pool.cc  id_allocate.cc  locktable_client.cc  phxpaxos_api.cc  plugin.cc  plugin_interface.cc  trx_info.cc  trx_log.cc  trx_log_hole.cc  xcom_gcs.cc
plugin/multi_master_log_plugin/test/: CMakeLists.txt  brpc_client_test.cc  brpc_server_test.cc  test.cc  test.proto
sql/: multi_master_handler.cc  mysqld.cc  mysqld.h  set_var.cc  sys_vars.cc
(+7 files in other folders)
